# stowage

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  fs.rs  handlers.rs  main.rs
crates/cmd-mount/: Cargo.toml
crates/cmd-mount/src/: commands.rs  error.rs  main.rs
crates/codec/: Cargo.toml
crates/codec/src/: codec.rs  fs.rs  lib.rs  proto.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/filesystems/: Cargo.toml
crates/filesystems/src/: disk.rs  lib.rs  memory.rs
crates/flags/: Cargo.toml
crates/flags-derive/: Cargo.toml
crates/flags-derive/src/: lib.rs
crates/flags/src/: const_api.rs  fallible.rs  iter.rs  lib.rs
crates/flags/test_suite/: common.rs
crates/proto/: Cargo.toml
crates/proto/src/: consts.rs  error.rs  ext.rs  fmt.rs  lib.rs  tests.rs
crates/proto/src/testdata/: complete-client.9p  complete-server.9p  ls-client.9p  ls-server.9p
crates/service/: Cargo.toml
crates/service/src/: lib.rs
flake-parts/: cargo.nix  shells.nix
pdata/collect/: run
