[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3.31"
# serde = { workspace = true }
# serde_json = { workspace = true }
stowage-proto = { path = "../proto" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
