[dependencies]
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
stowage-filesystems = { path = "../filesystems" }
stowage-proto = { path = "../proto" }
stowage-service = { path = "../service" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
