[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", features = ["fs", "mount", "user"] }
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
# tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-cmd-mount"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
