[dependencies]
bytes = "1.10.1"
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-proto"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
