[dependencies]
byteorder = "1.5.0"
bytes = { workspace = true }
flagset = { workspace = true }
futures = { workspace = true }
hex = "0.4.3"
# serde = { workspace = true }
# serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-test = "0.4.4"
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-proto"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
