[dependencies]
futures = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
stowage-proto = { path = "../proto" }
# thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
# tracing = { workspace = true }

[lints]
workspace = true

[package]
name = "stowage-service"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
